<?xml version="1.0"?>
<package>
  <name>phantom_msgs</name>
  <version>0.2.0</version>
  <description>The phantom_msgs package</description>
  <maintainer email="ros@todo.todo">ros</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <nodelet plugin="${prefix}/phantom_msgs.xml" />
  </export>

</package>
